--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             display:flex;
             justify-content:space-around;
             transition: margin-top 0.5s ease-in-out;
+            z-index:99;
         }
         .hidden{
             margin-top:-70px;
